# RugaTeam

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
LUMC/: 2025-03-04.docx.ruga
P2/retrieval/: check_db.py  vector_store.py
assets/: tags.txt  topics.txt
backend/: README.md  main.py
backend/models/: folder_structure_schemas.py  schemas.py
backend/services/: analysis_service.py  chat_service.py  file_service.py  folder_organization_service.py  job_service.py  vector_store_service.py
backend/utils/: __init__.py  llm_config.py
d11c13df_Medical Department Archives/Education/2022-2023/: RWE - When is the evidence convincing - R. Groenwold (2023-01-10).pdf.ruga
d11c13df_Medical Department Archives/Research Meeting/2022-2023/: Glucocorticoids and VTE (MEGA study) - E. Camilleri (2023-02-07).pdf.ruga  Interpreting Research Results - A. van der Bom (2023-02-14).pptx.ruga  Pancreatic Cancer Surveillance - D. Klatte (2023-01-24).pptx.ruga
examples/: analyze_folder.py  process_folder.py  rag_with_chromadb.py  ruga_file_handler.py  test_docling.py  test_llm.py  test_ruga_handler.py
examples/unstructured_folder/: clinical_trial_design.txt  folder_analysis.txt  folder_analysis.txt.ruga  presentation_final.txt
examples/unstructured_folder/2023/: missing_data_sept2023.txt  survival_analysis_nov2023.txt  world_headlines_sept2023.txt
examples/unstructured_folder/2024/: ML_epidemiology_lecture.txt  causal_inference_may2024.txt  pharmacoepidemiology_seminar.txt  workshop_R_advanced.txt
frontend/: .example.env  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/routes/: +error.svelte  +layout.svelte  (+2 more)
ruga_cli/: QUICKSTART.md  README.md  __init__.py  __main__.py  api_client.py  cli.py
(+37 files in other folders)
