[project]
name = "rugateam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.124.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pymupdf4llm>=0.2.7",
    "pytest>=9.0.2",
    "python-pptx>=1.0.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "uvicorn>=0.38.0",
]
