[project]
name = "ruga-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.64.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]
