[project]
name = "ruga-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.64.1",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.2",
    "langchain-chroma>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph-cli[inmem]>=0.4.7",
    "python-dotenv>=1.2.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "viztracer>=1.1.1",
    "langchain-google-genai>=2.0.0",
]

[project.scripts]
ruga = "ruga_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["backend*", "ruga_cli*"]

[tool.pyright]
extraPaths = ["./examples"]

[tool.uv]
package = true